--- a/package.json
+++ b/package.json
@@ -6,11 +6,12 @@
   "scripts": {
     "dev": "node server.js",
     "build": "next build",
-    "start": "NODE_ENV=production node server.js"
+    "start": "set NODE_ENV=production&&node server.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "aws-serverless-express": "^3.3.6",
     "axios": "^0.18.0",
     "dotenv": "^8.0.0",
     "express": "^4.17.0",
