--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@material-ui/core": "^4.9.5",
     "aws-serverless-express": "^3.3.6",
     "axios": "^0.18.1",
     "dotenv": "^8.0.0",
