--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@zeit/next-sass": "^1.0.1",
     "aws-serverless-express": "^3.3.6",
     "axios": "^0.18.1",
+    "classnames": "^2.2.6",
     "dotenv": "^8.0.0",
     "express": "^4.17.0",
     "next": "^9.2.1",
