--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "next": "^9.2.1",
     "node-sass": "^4.13.1",
     "react": "^16.8.6",
-    "react-dom": "^16.8.6"
+    "react-dom": "^16.8.6",
+    "react-feather": "^2.0.8"
   }
 }
